force-app/main/default/objects/ssot__CourseOfferingRubric__dlm/fields/ssot__ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActivityType__c</fullName>
    <label>Activity Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActivityType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>