force-app/main/default/objects/ssot__CourseOfferingRubric__dlm/fields/ssot__BestOfQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__BestOfQuantity__c</fullName>
    <label>Best Of</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BestOfQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>