force-app/main/default/objects/ssot__CourseOfferingRubric__dlm/fields/ssot__InstancesQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__InstancesQuantity__c</fullName>
    <label>Instances</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InstancesQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>