force-app/main/default/objects/ssot__CourseOfferingRubric__dlm/fields/ssot__WeightingNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__WeightingNumber__c</fullName>
    <label>Weighting</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WeightingNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>